--- a/Samples/Samples.Orchestrator.Api/appsettings.Development.json
+++ b/Samples/Samples.Orchestrator.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=mysecretpassword;Host=localhost;Port=5432;Database=postgres;Pooling=true;"
+    "DefaultConnection": "User ID=user;Password=password;Host=localhost;Port=5432;Database=postgres;Pooling=true;"
   }
 }
