--- a/Samples/Samples.Orchestrator.Tests/Samples.Orchestrator.Tests.csproj
+++ b/Samples/Samples.Orchestrator.Tests/Samples.Orchestrator.Tests.csproj
@@ -23,7 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Samples.Orchestrator.Api\Samples.Orchestrator.Api.csproj" />
+      <ProjectReference Include="..\Samples.Orchestrator.Core\Samples.Orchestrator.Core.csproj" />
     </ItemGroup>
 
 </Project>
