--- a/Samples/Samples.Orchestrator.Core/appsettings.Development.json
+++ b/Samples/Samples.Orchestrator.Core/appsettings.Development.json
@@ -6,13 +6,13 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=user;Password=password;Host=localhost;Port=5432;Database=postgres;Pooling=true;"
+    "DefaultConnection": "User ID=postgres;Password=mysecretpassword;Host=localhost;Port=5432;Database=postgres;Pooling=true;"
   },
   "Broker": {
     "Host": "localhost",
     "Port": "15672",
-    "Username": "guest",
-    "Password": "guest",
+    "Username": "user",
+    "Password": "password",
     "Endpoints": {
       "PaymentSubmitted": "saga.payment.submitted",
       "PaymentAccepted": "saga.payment.accepted",
