--- a/Samples/Samples.Orchestrator.Tests/Samples.Orchestrator.Tests.csproj
+++ b/Samples/Samples.Orchestrator.Tests/Samples.Orchestrator.Tests.csproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.0" />
+        <PackageReference Include="FluentAssertions" Version="8.0.1" />
         <PackageReference Include="MassTransit" Version="8.3.6" />
         <PackageReference Include="MassTransit.Kafka" Version="8.3.6" />
         <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.6" />
