--- a/Samples/Orchestrator/Samples.Orchestrator.Core/appsettings.Development.json
+++ b/Samples/Orchestrator/Samples.Orchestrator.Core/appsettings.Development.json
@@ -18,10 +18,12 @@
       "PaymentAccepted": "saga.payment.accepted",
       "PaymentCancelled": "saga.payment.cancelled",
       "PaymentRollback": "saga.payment.rollback",
+      "PaymentProcessing": "saga.payment.processing",
       "ShippingSubmitted": "saga.shipping.submitted",
       "ShippingAccepted": "saga.shipping.accepted",
       "ShippingCancelled": "saga.shipping.cancelled",
-      "ShippingRollback": "saga.shipping.rollback"
+      "ShippingRollback": "saga.shipping.rollback",
+      "ShippingProcessing": "saga.shipping.processing"
     }
   }
 }
