--- a/Samples/Orchestrator/Samples.Orchestrator.Core/appsettings.json
+++ b/Samples/Orchestrator/Samples.Orchestrator.Core/appsettings.json
@@ -5,5 +5,26 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=postgres;Password=mysecretpassword;Host=localhost;Port=5432;Database=postgres;Pooling=true;"
+  },
+  "Broker": {
+    "Host": "localhost",
+    "Port": "15672",
+    "Username": "user",
+    "Password": "password",
+    "Endpoints": {
+      "PaymentSubmitted": "saga.payment.submitted",
+      "PaymentAccepted": "saga.payment.accepted",
+      "PaymentCancelled": "saga.payment.cancelled",
+      "PaymentRollback": "saga.payment.rollback",
+      "PaymentProcessing": "saga.payment.processing",
+      "ShippingSubmitted": "saga.shipping.submitted",
+      "ShippingAccepted": "saga.shipping.accepted",
+      "ShippingCancelled": "saga.shipping.cancelled",
+      "ShippingRollback": "saga.shipping.rollback",
+      "ShippingProcessing": "saga.shipping.processing"
+    }
+  }
 }
