fix: ajustes no appsettings

--- a/Samples/Orchestrator/Samples.Orchestrator.Core/appsettings.Development.json
+++ b/Samples/Orchestrator/Samples.Orchestrator.Core/appsettings.Development.json
@@ -14,6 +14,8 @@
     "Username": "user",
     "Password": "password",
     "Endpoints": {
+      "ConsumerGroup": "generic",
+      "Initial": "saga.initial",
       "PaymentSubmitted": "saga.payment.submitted",
       "PaymentAccepted": "saga.payment.accepted",
       "PaymentCancelled": "saga.payment.cancelled",
