--- a/Samples/Orchestrator/Samples.Orchestrator.Tests/Samples.Orchestrator.Tests.csproj
+++ b/Samples/Orchestrator/Samples.Orchestrator.Tests/Samples.Orchestrator.Tests.csproj
@@ -10,6 +10,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Bogus" Version="35.6.2" />
         <PackageReference Include="coverlet.collector" Version="6.0.0" />
         <PackageReference Include="FluentAssertions" Version="8.0.1" />
         <PackageReference Include="MassTransit" Version="8.4.0" />
