--- a/Samples/Orchestrator/Samples.Orchestrator.Core/appsettings.Development.json
+++ b/Samples/Orchestrator/Samples.Orchestrator.Core/appsettings.Development.json
@@ -6,11 +6,11 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=mysecretpassword;Host=localhost;Port=5432;Database=postgres;Pooling=true;"
+    "DefaultConnection": "User ID=devuser;Password=devpass;Host=localhost;Port=5432;Database=orchestrator_db;Pooling=true;"
   },
   "Broker": {
     "Host": "localhost",
-    "Port": "15672",
+    "Port": "9092",
     "Username": "user",
     "Password": "password",
     "Endpoints": {
