--- a/Samples/Orchestrator/Samples.Orchestrator.Core/appsettings.Development.json
+++ b/Samples/Orchestrator/Samples.Orchestrator.Core/appsettings.Development.json
@@ -19,13 +19,12 @@
       "PaymentSubmitted": "saga.payment.submitted",
       "PaymentAccepted": "saga.payment.accepted",
       "PaymentCancelled": "saga.payment.cancelled",
-      "PaymentRollback": "saga.payment.rollback",
-      "PaymentProcessing": "saga.payment.processing",
+      "PaymentDeadLetter": "saga.payment.deadletter",
       "ShippingSubmitted": "saga.shipping.submitted",
       "ShippingAccepted": "saga.shipping.accepted",
       "ShippingCancelled": "saga.shipping.cancelled",
-      "ShippingRollback": "saga.shipping.rollback",
-      "ShippingProcessing": "saga.shipping.processing"
+      "ShippingDeadLetter": "saga.shipping.deadletter",
+      "Final": "saga.final"
     }
   }
 }
